# MPVGL

./: .clang-format  .clang-tidy  .clangd  .clangd.in  .gitmodules  CMakeLists.txt  CMakePresets.json  config.hpp.in  flake.nix  main.cpp
CMake/: setup_expected.cmake  setup_glfw.cmake  setup_glslang.cmake  setup_tinyobjloader.cmake
examples/: CMakeLists.txt  main.cpp
include/MPVGL/Collections/Graphics/: ColorSpace.hpp  Iterators.hpp
include/MPVGL/Compression/: HuffmanTree.hpp  ZigZag.hpp
include/MPVGL/Core/: Camera.hpp  Color.hpp  Error.hpp  InputManager.hpp  RenderWindow.hpp  Renderer.hpp  Scene.hpp  UniformBufferObject.hpp  Vulkan.hpp  Window.hpp  WindowConfig.hpp
include/MPVGL/Core/Shader/: Shader.hpp  ShaderCompiler.hpp  ShaderWatcher.hpp
include/MPVGL/Core/Vulkan/: Buffer.hpp  CommandPool.hpp  Descriptor.hpp  Device.hpp  DeviceBuilder.hpp  DeviceContext.hpp  GraphicsPipeline.hpp  Init.hpp  Initializers.hpp  Instance.hpp  InstanceBuilder.hpp  Internal.hpp  LogicalDeviceBuilder.hpp  Model.hpp  PhysicalDevice.hpp  PhysicalDeviceBuilder.hpp  Pipeline.hpp  RenderPass.hpp  Swapchain.hpp  SwapchainBuilder.hpp  SyncObjects.hpp  Texture.hpp  Vertex.hpp
include/MPVGL/Engine/Core/: RenderWindow.hpp  Vulkan.hpp
include/MPVGL/Error/: CompressionError.hpp  EngineError.hpp  Error.hpp  IOError.hpp
include/MPVGL/Geometry/: Mesh.hpp  Shape.hpp  Shape.tpp  ShapeTraits.hpp
include/MPVGL/Graphics/: Color.hpp  ColorConversion.hpp  Extent.hpp  Indices.hpp  Pixel.hpp  Pixel.tpp
include/MPVGL/IO/: BinaryReader.hpp  IO.hpp  Loader.hpp  PPMLoader.hpp  ResourceBuffer.hpp
include/MPVGL/IO/JPEG/: ByteStuffing.hpp  JPEG.hpp  MCUView.hpp  Tables.hpp
include/MPVGL/Math/Transforms/: IDCT.hpp
include/MPVGL/Traits/Concepts/: Arithmetic.hpp
include/MPVGL/Utility/: BitMask.hpp  MemoryUtils.hpp  Readers.hpp  Types.hpp
include/MPVGL/Views/: AsTypeView.hpp  BitView.hpp  BitView.tpp
scripts/: run.py
shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/MPVGL/Core/: InputManager.cpp  RenderWindow.cpp  Renderer.cpp  Vulkan.cpp  Window.cpp
src/MPVGL/Core/Vulkan/: Buffer.cpp  CommandPool.cpp  Descriptor.cpp  GraphicsPipeline.cpp  Init.cpp  Internal.cpp  Model.cpp  Pipeline.cpp  RenderPass.cpp  Swapchain.cpp  SyncObjects.cpp  Texture.cpp
src/MPVGL/Engine/Core/: RenderWindow.cpp  Vulkan.cpp
tests/: CMakeLists.txt  test_jpeg.cpp
textures/: output.ppm1
